--- a/SistemaVentas.IOC/SistemaVentas.IOC.csproj
+++ b/SistemaVentas.IOC/SistemaVentas.IOC.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaVentas.BLL\SistemaVentas.BLL.csproj" />
+    <ProjectReference Include="..\SistemaVentas.DAL\SistemaVentas.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
